remove padding re-size on button hover

--- a/css/styles.css
+++ b/css/styles.css
@@ -29,7 +29,7 @@ form .btn {
   border-radius: 50%;
   border-width: 20px;
   padding: 100px;
-  opacity: .9;
+  opacity: .8;
   margin: auto;
   display: block;
   margin-top: 100px
@@ -39,7 +39,10 @@ form .btn:hover {
   color: rgb(255, 255, 255);
   background-color: rgb(255, 0, 0);
   opacity: 1;
-  padding: 101px;
+  padding: 100px;
+  border: solid #10100f;
+  border-radius: 50%;
+  border-width: 20px;
 }
 
 #result {
